some fixes and visible back for devices

--- a/less/main.less
+++ b/less/main.less
@@ -575,6 +575,7 @@ header {
   .devices {
     .mid_block;
     height: 700px;
+    background: blue;
   }
   
 /* ==========================================================================
@@ -583,6 +584,7 @@ header {
   
   .table {
     .mid_block;
+    padding: 55px 0;
     table {
       .footer-font(@proxima-nova-bold, .875em, 2.3571em);
       width: 100%;        
